// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

package digitaltwin;

service DigitalTwin {
    rpc FindById (FindByIdRequest) returns (FindByIdResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Unregister (UnregisterRequest) returns (UnregisterResponse);
}

message FindByIdRequest {
   string payload = 1;
}

message FindByIdResponse {
   string payload = 1;
}

message RegisterRequest {
   string payload = 1;
}

message RegisterResponse {
   string payload = 1;
}

message UnregisterRequest {
   string payload = 1;
}

message UnregisterResponse {
   string payload = 1;
}